Nova seção introdução adicionada na página de lista das aparições

--- a/aparicoes.html
+++ b/aparicoes.html
@@ -29,13 +29,19 @@
       </nav>
 
       <div id="textoInicial">
+        <h4>Introdução</h4>
+        <p>Para iniciarmos no conhecimento das aparições, é importante ressaltar que nenhum católico é obrigado a aceitá-las, uma vez que não pertencem ao depósito da fé.
+        <br> Conforme o que nos ensina o Catecismo da Igreja Católica, nº 67, o papel das aparições não é completar ou melhorar a Revelação de Cristo, e sim ajudar a vive-lâ de maneira mais perfeita.
+        <br> Compreender isso, é de extrema importância para não cairmos em mentiras advindas de espíritos a não ser o do próprio Deus. <br>A respeito disso, São João nos exortou: "Caríssimos, não deis fé a qualquer espírito, mas examinai se os espíritos são de Deus, porque muitos falsos profetas se levantaram no mundo" (1 Jo 4,1)
+        <br> Portanto, observemos as aparições como um meio para nos santificarmos e aproximar-nos de Nosso Senhor Jesus Cristo!</p>
+      </div>
+
+      <div id="textoInicial">
         <h3 class="listAparicoes">Lista das Aparições</h3>
         <div id="aparicoesLista">
           <img src="images/nossaSenhora.jpg" alt="" class="imgNossaSenhora">
-  
         </div>
-      </div>
-  
+      </div>  
     <script src="aparicoes.js"></script>
 </body>
 </html>
