Pequenas alterações de fonte na página principal

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p> O objetivo principal deste site é expor e fazer conhecidas todas as aparições marianas registradas até hoje!
         Além disso, principalmente nos tempos que vivemos, torna-se necessário a divulgação da devoção à Virgem Maria, mãe de Deus, para recrutarmos novos soldados para o exército de Maria!</p>
         <p> Dessa maneira, podemos contribuir ativamente para o cumprimento da profecia feita no livro do
-        <b>Gênesis 3,15</b>: "Porei ódio entre ti e a mulher, entre a tua descendência e a dela.
+        Gênesis 3,15: "Porei ódio entre ti e a mulher, entre a tua descendência e a dela.
         Esta te ferirá a cabeça, e tu ferirás o calcanhar" </p>
         <p> Lembremos também, da profecia revelada por Nossa Senhora em Fátima no ano de 1917: "Por fim, meu imaculado coração triunfará."</p>
         <img src="images/Maria_e_o_menino_Jesus.jpeg" width="300px" height="400px">
