Link da página de referências adicionado nas demais páginas

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="navBarItens">
               <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               <a class="nav-link" href="aparicoes.html">Lista das Aparições</a>
+              <a class="nav-link" href="referencias.html">Referências</a>
             </div>
           </div>
         </div>
