Tags de redirecionamento adicionadas aos links da página principal e de referências

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <br>
         <br>
         <p>*Obs: página inspirada no site sobre os Milagres Eucarísticos criado pelo Beato Carlo Acutis:
-        <a href="http://www.miracolieucaristici.org/en/Liste/list.html">link para o site</a>*</p>
+        <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank">link para o site</a>*</p>
       </article>
 </body>
 </html>
