--- a/referencias.html
+++ b/referencias.html
@@ -35,10 +35,10 @@
       <article id = "textoInicial">
       <h3>Referências bibliográficas</h3>
       <p>Abaixo se encontram todas as referências dos conteúdos utilizados para a produção do site: </p> 
-      <a href ="https://padrepauloricardo.org/blog/aparicoes-marianas-o-que-sao-e-qual-o-seu-papel-na-vida-crista?periodo=https%3A%2F%2Fpadrepauloricardo.org%2Fblog%2Farquivo%2F2014%2F7">https://padrepauloricardo.org/blog/aparicoes-marianas-o-que-sao-e-qual-o-seu-papel-na-vida-crista</a>
+      <a href ="https://padrepauloricardo.org/blog/aparicoes-marianas-o-que-sao-e-qual-o-seu-papel-na-vida-crista?periodo=https%3A%2F%2Fpadrepauloricardo.org%2Fblog%2Farquivo%2F2014%2F7" target="_blank">https://padrepauloricardo.org/blog/aparicoes-marianas-o-que-sao-e-qual-o-seu-papel-na-vida-crista</a>
       <br>
       <br>
-      <a href="https://salvaimerainha.org.br/nossa-senhora-de-fatima/">https://salvaimerainha.org.br/nossa-senhora-de-fatima/</a>
+      <a href="https://salvaimerainha.org.br/nossa-senhora-de-fatima/" target="_blank">https://salvaimerainha.org.br/nossa-senhora-de-fatima/</a>
       
       </article> 
       
