Novas referências adicionadas na página de referências

--- a/referencias.html
+++ b/referencias.html
@@ -39,7 +39,12 @@
       <br>
       <br>
       <a href="https://salvaimerainha.org.br/nossa-senhora-de-fatima/" target="_blank">https://salvaimerainha.org.br/nossa-senhora-de-fatima/</a>
-      
+      <br>
+      <br>
+      <a href="https://www.nossasagradafamilia.com.br/oracoes/oracao-de-nossa-senhora-de-fatima-para-alcancar-gracas">https://www.nossasagradafamilia.com.br/oracoes/oracao-de-nossa-senhora-de-fatima</a>
+      <br>
+      <br>
+      <a href="https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/473/102/">https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/</a>
       </article> 
       
 </body>
