Dropdown para trocar o idioma adicionado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
           <figure>
             <img src = "images/medalha_milagrosa-sem_fundo.png" width="170px" height="100px" alt="Medalha Milagrosa">
-            <figcaption>Aparições Marianas</figcaption>
+            <figcaption class = "tdr">Aparições Marianas</figcaption>
           </figure>
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -24,17 +24,18 @@
           </button>
           <div class="collapse navbar-collapse" style="height: 12vh;" id="navbarNavAltMarkup">
             <div class="navBarItens">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-              <a class="nav-link" href="aparicoes.html">Lista das Aparições</a>
-              <a class="nav-link" href="referencias.html">Referências</a>
+              <a class="nav-link active tdr" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link tdr" href="aparicoes.html">Lista das Aparições</a>
+              <a class="nav-link tdr" href="referencias.html">Referências</a>
             </div>
           </div>
         </div>
       </nav>
       <article id = "textoInicial">
-        <h3> Seja bem-vindo(a) à exposição das aparições marianas!</h3>
-        <p> O objetivo principal deste site é expor e fazer conhecidas todas as aparições marianas registradas até hoje!
-        Além disso, principalmente nos tempos que vivemos, torna-se necessário a divulgação da devoção à Virgem Maria, mãe de Deus, para recrutarmos novos soldados para o exército de Maria!</p>
+        <div id = "google_translate_element"></div>
+        <br>
+        <h3 class = "tdr">Seja bem-vindo à exposição das aparições marianas!</h3>
+        <p class = "tdr"> O objetivo principal deste site é expor e fazer conhecidas todas as aparições marianas registradas até hoje! Além disso, principalmente nos tempos que vivemos, torna-se necessário a divulgação da devoção à Virgem Maria, mãe de Deus, para recrutarmos novos soldados para o exército de Maria!</p>
         <p> Dessa maneira, podemos contribuir ativamente para o cumprimento da profecia feita no livro do
         Gênesis 3,15: "Porei ódio entre ti e a mulher, entre a tua descendência e a dela.
         Esta te ferirá a cabeça, e tu ferirás o calcanhar" </p>
@@ -43,7 +44,10 @@
         <br>
         <br>
         <p>*Obs: página desenvolvida por: <a href="https://github.com/thiagolutes" target="_blank">Thiago Lutes</a> e <a href="https://github.com/PauloHenrique2"target="_blank">Paulo Henrique Resende Vianna</a>, inspirada no site sobre os Milagres Eucarísticos criado pelo Beato Carlo Acutis:
-        <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank">link para o site</a>*</p>
+        <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank" class = "tdr">link para o site</a>*</p>
       </article>
+      
+      <script type="text/javascript" src="traducao.js"></script>
+      <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
