--- a/aparicoes.html
+++ b/aparicoes.html
@@ -28,8 +28,8 @@
           </div>
         </div>
       </nav>
-
       <div id="textoInicial">
+        <br>
         <h4>Introdução</h4>
         <p>Para iniciarmos no conhecimento das aparições, é importante ressaltar que nenhum católico é obrigado a aceitá-las, uma vez que não pertencem ao depósito da fé.
         <br> Conforme o que nos ensina o Catecismo da Igreja Católica, nº 67, o papel das aparições não é completar ou melhorar a Revelação de Cristo, e sim ajudar a vive-lâ de maneira mais perfeita.
@@ -44,5 +44,7 @@
         </div>
       </div>  
     <script src="aparicoes.js"></script>
+    <script type="text/javascript" src="traducao.js"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
