--- a/detalhes.html
+++ b/detalhes.html
@@ -36,6 +36,7 @@
   </div>
 
   <script src="detalhes.js"></script>
-     
+  <script type="text/javascript" src="traducao.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
