Script de tradução adicionado à página

--- a/referencias.html
+++ b/referencias.html
@@ -45,7 +45,8 @@
       <br>
       <br>
       <a href="https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/473/102/">https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/</a>
+      <script type="text/javascript" src="traducao.js"></script>
+      <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
       </article> 
-      
 </body>
 </html>
