--- a/referencias.html
+++ b/referencias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href = "main_style.css" rel = "stylesheet">
+    <link href = "css/main_style.css" rel ="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -45,7 +45,7 @@
       <br>
       <br>
       <a href="https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/473/102/">https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/</a>
-      <script type="text/javascript" src="traducao.js"></script>
+      <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
       </article> 
 </body>
