--- a/aparicoes.html
+++ b/aparicoes.html
@@ -1,50 +1,74 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href = "main_style.css" rel = "stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Aparições Marianas</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary cabecario">
-        <div class="container-fluid">
-          <figure>
-            <img src = "images/medalha_milagrosa-sem_fundo.png" width="170px" height="100px" alt = "Medalha Milagrosa">
-            <figcaption>Aparições Marianas</figcaption>
-          </figure>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navBarItens">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-              <a class="nav-link" href="aparicoes.html">Lista das Aparições</a>
-              <a class="nav-link" href="referencias.html">Referências</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <div id="textoInicial">
-        <br>
-        <h4>Introdução</h4>
-        <p>Para iniciarmos no conhecimento das aparições, é importante ressaltar que nenhum católico é obrigado a aceitá-las, uma vez que não pertencem ao depósito da fé.
-        <br> Conforme o que nos ensina o Catecismo da Igreja Católica, nº 67, o papel das aparições não é completar ou melhorar a Revelação de Cristo, e sim ajudar a vive-lâ de maneira mais perfeita.
-        <br> Compreender isso, é de extrema importância para não cairmos em mentiras advindas de espíritos a não ser o do próprio Deus. <br>A respeito disso, São João nos exortou: "Caríssimos, não deis fé a qualquer espírito, mas examinai se os espíritos são de Deus, porque muitos falsos profetas se levantaram no mundo" (1 Jo 4,1)
-        <br> Portanto, observemos as aparições como um meio para nos santificarmos e aproximar-nos de Nosso Senhor Jesus Cristo!</p>
-      </div>
 
-      <div id="textoInicial">
-        <h3 class="listAparicoes">Lista das Aparições</h3>
-        <div id="aparicoesLista">
-          <img src="images/nossaSenhora.jpg" alt="" class="imgNossaSenhora">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="main_style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <title>Aparições Marianas</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary cabecario">
+    <div class="container-fluid">
+      <figure>
+        <img src="images/medalha_milagrosa-sem_fundo.png" width="170px" height="100px" alt="Medalha Milagrosa">
+        <figcaption>Aparições Marianas</figcaption>
+      </figure>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navBarItens">
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          <a class="nav-link" href="aparicoes.html">Lista das Aparições</a>
+          <a class="nav-link" href="referencias.html">Referências</a>
         </div>
-      </div>  
-    <script src="aparicoes.js"></script>
-    <script type="text/javascript" src="traducao.js"></script>
-    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+      </div>
+    </div>
+  </nav>
+
+  <div id="textoInicial">
+    <br>
+    <h4>Introdução</h4>
+    <p>Para iniciarmos no conhecimento das aparições, é importante ressaltar que nenhum católico é obrigado a
+      aceitá-las, uma vez que não pertencem ao depósito da fé.
+      <br> Conforme o que nos ensina o Catecismo da Igreja Católica, nº 67, o papel das aparições não é completar ou
+      melhorar a Revelação de Cristo, e sim ajudar a vive-lâ de maneira mais perfeita.
+      <br> Compreender isso, é de extrema importância para não cairmos em mentiras advindas de espíritos a não ser o do
+      próprio Deus. <br>A respeito disso, São João nos exortou: "Caríssimos, não deis fé a qualquer espírito, mas
+      examinai se os espíritos são de Deus, porque muitos falsos profetas se levantaram no mundo" (1 Jo 4,1)
+      <br> Portanto, observemos as aparições como um meio para nos santificarmos e aproximar-nos de Nosso Senhor Jesus
+      Cristo!
+    </p>
+  </div>
+
+  <div id="textoInicial">
+    <h3 class="listAparicoes">Lista das Aparições</h3>
+    <div id="aparicoesLista">
+      <img src="images/nossaSenhora.jpg" alt="" class="imgNossaSenhora">
+      <div class="paiContInputBusca">
+        <p>Pesquise pelo nome:</p>
+        <div class="input-container">
+          <input type="text" id="search-input" placeholder="Busque...">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="input-icon">
+              <path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/>
+          </svg>
+      </div>   
+      </div>
+    </div>
+  </div>
+
+  <script src="aparicoes.js"></script>
+  <script type="text/javascript" src="traducao.js"></script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </body>
+
 </html>
