--- a/aparicoes.html
+++ b/aparicoes.html
@@ -28,23 +28,41 @@
           </div>
         </div>
       </nav>
-      <div id="textoInicial">
-        <br>
-        <h4>Introdução</h4>
-        <p>Para iniciarmos no conhecimento das aparições, é importante ressaltar que nenhum católico é obrigado a aceitá-las, uma vez que não pertencem ao depósito da fé.
-        <br> Conforme o que nos ensina o Catecismo da Igreja Católica, nº 67, o papel das aparições não é completar ou melhorar a Revelação de Cristo, e sim ajudar a vive-lâ de maneira mais perfeita.
-        <br> Compreender isso, é de extrema importância para não cairmos em mentiras advindas de espíritos a não ser o do próprio Deus. <br>A respeito disso, São João nos exortou: "Caríssimos, não deis fé a qualquer espírito, mas examinai se os espíritos são de Deus, porque muitos falsos profetas se levantaram no mundo" (1 Jo 4,1)
-        <br> Portanto, observemos as aparições como um meio para nos santificarmos e aproximar-nos de Nosso Senhor Jesus Cristo!</p>
-      </div>
+      
+  <div id="textoInicial">
+    <br>
+    <h4>Introdução</h4>
+    <p>Para iniciarmos no conhecimento das aparições, é importante ressaltar que nenhum católico é obrigado a
+      aceitá-las, uma vez que não pertencem ao depósito da fé.
+      <br> Conforme o que nos ensina o Catecismo da Igreja Católica, nº 67, o papel das aparições não é completar ou
+      melhorar a Revelação de Cristo, e sim ajudar a vive-lâ de maneira mais perfeita.
+      <br> Compreender isso, é de extrema importância para não cairmos em mentiras advindas de espíritos a não ser o do
+      próprio Deus. <br>A respeito disso, São João nos exortou: "Caríssimos, não deis fé a qualquer espírito, mas
+      examinai se os espíritos são de Deus, porque muitos falsos profetas se levantaram no mundo" (1 Jo 4,1)
+      <br> Portanto, observemos as aparições como um meio para nos santificarmos e aproximar-nos de Nosso Senhor Jesus
+      Cristo!
+    </p>
+  </div>
 
-      <div id="textoInicial">
-        <h3 class="listAparicoes">Lista das Aparições</h3>
-        <div id="aparicoesLista">
-          <img src="images/nossaSenhora.jpg" alt="" class="imgNossaSenhora">
-        </div>
-      </div>  
-    <script type="text/javascript" src="/scripts/aparicoes.js"></script>
+  <div id="textoInicial">
+    <h3 class="listAparicoes">Lista das Aparições</h3>
+    <div id="aparicoesLista">
+      <img src="images/nossaSenhora.jpg" alt="" class="imgNossaSenhora">
+      <div class="paiContInputBusca">
+        <p>Pesquise pelo nome:</p>
+        <div class="input-container">
+          <input type="text" id="search-input" placeholder="Busque...">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="input-icon">
+              <path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/>
+          </svg>
+      </div>   
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="/scripts/aparicoes.js"></script>
     <script type="text/javascript" src="/scripts/traducao.js"></script>
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    
 </body>
 </html>
