Novo link adicionado

--- a/referencias.html
+++ b/referencias.html
@@ -45,8 +45,11 @@
       <br>
       <br>
       <a href="https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/473/102/">https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/</a>
+      <br>
+      <br>
+      <a href="https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes-intercessora-dos-doentes/#:~:text=Foi%20no%20ano%20de%201858,leituras%20de%2011%20de%20fevereiro.">https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes-intercessora-dos-doentes/</a>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-      </article> 
+      </article>
 </body>
 </html>
