Dois links novos adicionados

--- a/referencias.html
+++ b/referencias.html
@@ -35,21 +35,27 @@
       <article id = "textoInicial">
       <h3>Referências bibliográficas</h3>
       <p>Abaixo se encontram todas as referências dos conteúdos utilizados para a produção do site: </p> 
-      <a href ="https://padrepauloricardo.org/blog/aparicoes-marianas-o-que-sao-e-qual-o-seu-papel-na-vida-crista?periodo=https%3A%2F%2Fpadrepauloricardo.org%2Fblog%2Farquivo%2F2014%2F7" target="_blank">https://padrepauloricardo.org/blog/aparicoes-marianas-o-que-sao-e-qual-o-seu-papel-na-vida-crista</a>
+      <a href ="https://padrepauloricardo.org/blog/aparicoes-marianas-o-que-sao-e-qual-o-seu-papel-na-vida-crista?periodo=https%3A%2F%2Fpadrepauloricardo.org%2Fblog%2Farquivo%2F2014%2F7" target="_blank">https://padrepauloricardo.org/blog/aparicoes-marianas</a>
       <br>
       <br>
       <a href="https://salvaimerainha.org.br/nossa-senhora-de-fatima/" target="_blank">https://salvaimerainha.org.br/nossa-senhora-de-fatima/</a>
       <br>
       <br>
-      <a href="https://www.nossasagradafamilia.com.br/oracoes/oracao-de-nossa-senhora-de-fatima-para-alcancar-gracas">https://www.nossasagradafamilia.com.br/oracoes/oracao-de-nossa-senhora-de-fatima</a>
+      <a href="https://www.nossasagradafamilia.com.br/oracoes/oracao-de-nossa-senhora-de-fatima-para-alcancar-gracas" target="_blank">https://www.nossasagradafamilia.com.br/oracoes/oracao-de-nossa-senhora-de-fatima</a>
       <br>
       <br>
-      <a href="https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/473/102/">https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/</a>
+      <a href="https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/473/102/" target="_blank">https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/</a>
       <br>
       <br>
-      <a href="https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes-intercessora-dos-doentes/#:~:text=Foi%20no%20ano%20de%201858,leituras%20de%2011%20de%20fevereiro.">https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes-intercessora-dos-doentes/</a>
+      <a href="https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes-intercessora-dos-doentes/#:~:text=Foi%20no%20ano%20de%201858,leituras%20de%2011%20de%20fevereiro." target="_blank">https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes/</a>
+      <br>
+      <br>
+      <a href="https://bibliotecacatolica.com.br/blog/devocao/historia-nossa-senhora-lourdes/?srsltid=AfmBOorAijDNNV9PKa829LDkLJ307p-nWB2zHm2zsPMFwxVRaQvBS2UN" target="_blank">https://bibliotecacatolica.com.br/blog/devocao/historia-nossa-senhora-lourdes/</a>
+      <br>
+      <br>
+      <a href="https://comshalom.org/oracao-a-nossa-senhora-de-la-salette/" target="_blank">https://comshalom.org/oracao-a-nossa-senhora-de-la-salette/</a>
+      </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-      </article>
 </body>
 </html>
