--- a/referencias.html
+++ b/referencias.html
@@ -54,6 +54,9 @@
       <br>
       <br>
       <a href="https://comshalom.org/oracao-a-nossa-senhora-de-la-salette/" target="_blank">https://comshalom.org/oracao-a-nossa-senhora-de-la-salette/</a>
+      <br>
+      <br>
+      <a href="https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-de-la-salette/?srsltid=AfmBOooFLOX0AMIbKTyiM8Iw2kKmiiNb55FTXW8jgyWnaEbvfID3ktw0" target="_blank">https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-de-la-salette/</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
