--- a/detalhes.html
+++ b/detalhes.html
@@ -35,7 +35,7 @@
     <div id="detalhesAparicao"></div>
   </div>
 
-  <script src="/scripts/detalhes.js"></script>
+  <script type="text/javascript" src="/scripts/detalhes.js"></script>
   <script type="text/javascript" src="/scripts/traducao.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
