Dois novos links adicionados

--- a/referencias.html
+++ b/referencias.html
@@ -57,6 +57,12 @@
       <br>
       <br>
       <a href="https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-de-la-salette/?srsltid=AfmBOooFLOX0AMIbKTyiM8Iw2kKmiiNb55FTXW8jgyWnaEbvfID3ktw0" target="_blank">https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-de-la-salette/</a>
+      <br>
+      <br>
+      <a href="https://santo.cancaonova.com/santo/nossa-senhora-das-gracas/" target="_blank">https://santo.cancaonova.com/santo/nossa-senhora-das-gracas/</a>
+      <br>
+      <br>
+      <a href="https://bibliotecacatolica.com.br/blog/formacao/nossa-senhora-das-gracas/" target="_blank">https://bibliotecacatolica.com.br/blog/formacao/nossa-senhora-das-gracas/</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
