Pequeno detalhe alterado no texto de introdução

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id = "google_translate_element"></div>
         <br>
         <h3 class = "tdr">Seja bem-vindo à exposição das aparições marianas!</h3>
-        <p class = "tdr"> O objetivo principal deste site é expor e fazer conhecidas todas as aparições marianas registradas até hoje! Além disso, principalmente nos tempos que vivemos, torna-se necessário a divulgação da devoção à Virgem Maria, mãe de Deus, para recrutarmos novos soldados para o exército de Maria!</p>
+        <p class = "tdr"> O objetivo principal deste site é expor e fazer conhecidas todas as aparições marianas registradas aprovadas pelo Vaticano até hoje! Além disso, principalmente nos tempos que vivemos, torna-se necessário a divulgação da devoção à Virgem Maria, mãe de Deus, para recrutarmos novos soldados para o exército de Maria!</p>
         <p> Dessa maneira, podemos contribuir ativamente para o cumprimento da profecia feita no livro do
         Gênesis 3,15: "Porei ódio entre ti e a mulher, entre a tua descendência e a dela.
         Esta te ferirá a cabeça, e tu ferirás o calcanhar" </p>
@@ -43,8 +43,8 @@
         <img src="images/Maria_e_o_menino_Jesus.jpeg" width="300px" height="400px">
         <br>
         <br>
-        <p>*Obs: página desenvolvida por: <a href="https://github.com/thiagolutes" target="_blank">Thiago Lutes</a> e <a href="https://github.com/PauloHenrique2" target="_blank">Paulo Henrique Resende Vianna</a>, inspirada no site sobre os Milagres Eucarísticos criado pelo Beato Carlo Acutis:
-        <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank" class = "tdr">link para o site</a>*</p>
+        <p>Página desenvolvida por: <a href="https://github.com/thiagolutes" target="_blank">Thiago Lutes</a> e <a href="https://github.com/PauloHenrique2" target="_blank">Paulo Henrique Resende Vianna</a>, inspirada no site sobre os Milagres Eucarísticos criado pelo Beato Carlo Acutis:
+        <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank" class = "tdr">link para o site</a></p>
       </article>
       
       <script type="text/javascript" src="/scripts/traducao.js"></script>
