Dois links adicionados

--- a/referencias.html
+++ b/referencias.html
@@ -63,6 +63,12 @@
       <br>
       <br>
       <a href="https://bibliotecacatolica.com.br/blog/formacao/nossa-senhora-das-gracas/" target="_blank">https://bibliotecacatolica.com.br/blog/formacao/nossa-senhora-das-gracas/</a>
+      <br>
+      <br>
+      <a href="https://bibliotecacatolica.com.br/blog/formacao/historia-de-nossa-senhora-de-guadalupe/?srsltid=AfmBOopGi-ADAlbNIgusfeW0A9qW4LnGmu9ORu7V4g74Zqr37pfd_KBJ" target="_blank">https://bibliotecacatolica.com.br/blog/formacao/historia-de-nossa-senhora-de-guadalupe/</a>
+      <br>
+      <br>
+      <a href="https://santo.cancaonova.com/santo/nossa-senhora-de-guadalupe-a-padroeira-da-america-latina/" target="_blank">https://santo.cancaonova.com/santo/nossa-senhora-de-guadalupe-a-padroeira-da-america-latina/</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
