--- a/referencias.html
+++ b/referencias.html
@@ -69,6 +69,9 @@
       <br>
       <br>
       <a href="https://santo.cancaonova.com/santo/nossa-senhora-de-guadalupe-a-padroeira-da-america-latina/" target="_blank">https://santo.cancaonova.com/santo/nossa-senhora-de-guadalupe-a-padroeira-da-america-latina/</a>
+      <br>
+      <br>
+      <a href="https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-do-sion" target="_blank">https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-do-sion</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
