--- a/referencias.html
+++ b/referencias.html
@@ -72,6 +72,12 @@
       <br>
       <br>
       <a href="https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-do-sion" target="_blank">https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-do-sion</a>
+      <br>
+      <br>
+      <a href="https://www.nossasagradafamilia.com.br/oracoes/orao-a-nossa-senhora-da-consolao#google_vignette=" target="_blank">https://www.nossasagradafamilia.com.br/oracoes/orao-a-nossa-senhora-da-consolacao</a>
+      <br>
+      <br>
+      <a href="https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-de-lezajsk" target="_blank">https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-de-lezajsk</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
