Novo link adicionado

--- a/referencias.html
+++ b/referencias.html
@@ -90,6 +90,9 @@
       <br>
       <br>
       <a href="https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-auxiliadora-dos-cristãos" target="_blank">https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-auxiliadora-dos-cristãos</a>
+      <br>
+      <br>
+      <a href="https://www.arautos.org/secoes/artigos/arte-e-cultura/historia-da-igreja/nossa-senhora-da-esperanca-282138" target="_blank">https://www.arautos.org/secoes/artigos/arte-e-cultura/historia-da-igreja/nossa-senhora-da-esperanca</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
