--- a/referencias.html
+++ b/referencias.html
@@ -102,6 +102,12 @@
       <br>
       <br>
       <a href="https://tendadosenhor.com.br/a-linda-historia-da-virgem-do-silencio/" target="_blank">https://tendadosenhor.com.br/a-linda-historia-da-virgem-do-silencio/</a>
+      <br>
+      <br>
+      <a href="https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-dos-pobres" target="_blank">https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-dos-pobres</a>
+      <br>
+      <br>
+      <a href="https://hijosdemaria.mensajerosdivinos.org/pt-br/cnsp/icone-de-nossa-senhora-dos-pobres" target="_blank">https://hijosdemaria.mensajerosdivinos.org/pt-br/cnsp/icone-de-nossa-senhora-dos-pobres</a>  
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
