--- a/referencias.html
+++ b/referencias.html
@@ -71,6 +71,9 @@
       <a href="https://santo.cancaonova.com/santo/nossa-senhora-de-guadalupe-a-padroeira-da-america-latina/" target="_blank">https://santo.cancaonova.com/santo/nossa-senhora-de-guadalupe-a-padroeira-da-america-latina/</a>
       <br>
       <br>
+      <a href="https://sitecatolico.com.br/os-misterios-do-manto-de-nossa-senhora-de-guadalupe-12-de-dezembro/" target="_blank">https://sitecatolico.com.br/os-misterios-do-manto-de-nossa-senhora-de-guadalupe/</a>
+      <br>
+      <br>
       <a href="https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-do-sion" target="_blank">https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-do-sion</a>
       <br>
       <br>
