--- a/mapa.html
+++ b/mapa.html
@@ -1,10 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href = "/css/main_style.css" rel = "stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Aparições Marianas</title>
+    <link href="/css/map_page_style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <title>Mapa das Aparições Marianas</title>
 </head>
+
+<body>
+    <header>
+        <br>
+        <ul style="list-style-type:none;">
+            <li><a href="index.html"><h5 style="text-decoration: underline; color: rgb(57, 57, 57);"><b>Início</b></h5></a></li>
+            <li><a href="aparicoes.html"><h5 style="text-decoration: underline; color: rgb(57, 57, 57);"><b>Lista das aparições</b></h5></a></li>
+            <li><a href="referencias.html"><h5 style="text-decoration: underline; color: rgb(57, 57, 57);"><b>Referências</b></h5></a></li>
+        </ul>
+        <br>
+        <h5 style="text-align: center;">Mapa das apariçoes</h5>
+        <br>
+        <p>Observe abaixo o mapa do mundo com os locais das aparições marcados e clique nos marcadores azuis para obter
+           mais informações sobre a aparição.
+        </p>
+        <br>
+    </header>
+    <div id="map" style="height: 69vh;">
+    </div>
+
+    <script>
+        let map = L.map("map").setView([37.61, -122.011], 10);
+
+        L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+            maxZoom: 20
+        }).addTo(map);
+
+        let zaragoza = L.marker([41.65691789582794, -0.8784745815454716]).addTo(map);
+        let fatima = L.marker([39.63127532153284, -8.67315218237831]).addTo(map);
+        let paris = L.marker([48.8507837896766, 2.322977305335615]).addTo(map);
+        let lourdes = L.marker([43.097591421611256, -0.05870591965005861]).addTo(map);
+        let sallete = L.marker([44.858628447045405, 5.9788064683618805]).addTo(map);
+        let guadalupe = L.marker([19.486295968151012, -99.11516255158693]).addTo(map);
+        let roma = L.marker([41.9036323895654, 12.483507672900426]).addTo(map);
+        let lezajsk = L.marker([50.27051261458389, 22.408678702070706]).addTo(map);
+        let siluva = L.marker([55.53061539541645, 23.21991247309754]).addTo(map);
+        let laus = L.marker([44.52122093284419, 6.152105467908496]).addTo(map);
+        let filipov = L.marker([50.81140894824067, 14.397622437454045]).addTo(map);
+        let pontmain = L.marker([48.43959793253507, -1.0591001100132138]).addTo(map);
+        let gietrzwald = L.marker([53.74804270191199, 20.23549536565065]).addTo(map);
+        let knock = L.marker([53.7920679235046, -8.91752977714699]).addTo(map);
+        let sprimont = L.marker([50.54089244870204, 5.73888739060881]).addTo(map);
+
+        zaragoza.bindPopup("<b>Aparição de Nossa Senhora do Pilar</b> <br> Nossa Senhora aparece a São Tiago, apóstolo de Cristo, em um pilar de mármore reluzente <br><a href='detalhes.html?id=1'>Clique aqui para obter mais detalhes</a>");
+        fatima.bindPopup("<b>Aparição de Nossa Senhora de Fátima</b> <br> Nossa Senhora aparece a três pastorinhos durante 5 meses, a partir de Maio, no dia 13 de cada mês <br><a href='detalhes.html?id=2'>Clique aqui para obter mais detalhes</a>");
+        paris.bindPopup("<b>Aparição de Nossa Senhora das Graças</b> <br> Nossa Senhora aparece a Santa Catarina Labouré três vezes em uma capela <br><a href='detalhes.html?id=3'>Clique aqui para obter mais detalhes</a>");
+        lourdes.bindPopup("<b>Aparição de Nossa Senhora de Lourdes</b> <br> Nossa Senhora aparece a Bernadette Soubirous na gruta Massabielle durante 18 aparições <br><a href='detalhes.html?id=4'>Clique aqui para obter mais detalhes</a>");
+        sallete.bindPopup("<b>Aparição de Nossa Senhora de La Salette</b> <br> Nossa Senhora aparece a duas crianças em uma montanha <br><a href='detalhes.html?id=5'>Clique aqui para obter mais detalhes</a>");
+        guadalupe.bindPopup("<b>Aparição de Nossa Senhora de Guadalupe</b> <br> Nossa Senhora aparece ao indígena Juan Diego <br><a href='detalhes.html?id=6'>Clique aqui para obter mais detalhes</a>");
+        roma.bindPopup("<b>Aparição de Nossa Senhora de Sion</b> <br> Nossa Senhora aparece a um judeu anti-católico, chamado Marie Alphonse Ratisbonne <br><a href='detalhes.html?id=7'>Clique aqui para obter mais detalhes</a>");
+        lezajsk.bindPopup("<b>Aparição de Nossa Senhora de Leżajsk</b> <br> Nossa Senhora aparece ao proprietário de um moinho <br><a href='detalhes.html?id=8'>Clique aqui para obter mais detalhes</a>");
+        siluva.bindPopup("<b>Aparição de Nossa Senhora de Šiluva</b> <br> Nossa Senhora aparece a jovens pastores <br><a href='detalhes.html?id=9'>Clique aqui para obter mais detalhes</a>");
+        laus.bindPopup("<b>Aparição de Nossa Senhora de Laus</b> <br> Nossa Senhora aparece a uma jovem pastora de 17 anos nos alpes franceses <br><a href='detalhes.html?id=10'>Clique aqui para obter mais detalhes</a>");
+        filipov.bindPopup("<b>Aparição de Nossa Senhora Auxiliadora dos Cristãos</b> <br> Nossa Senhora aparece a Magdalene Kade, uma mulher órfã de 31 anos <br><a href='detalhes.html?id=11'>Clique aqui para obter mais detalhes</a>");
+        pontmain.bindPopup("<b>Aparição de Nossa Senhora de Pontmain</b> <br> Nossa Senhora aparece a uma criança chamada Eugène de la Salle <br><a href='detalhes.html?id=12'>Clique aqui para obter mais detalhes</a>");
+        gietrzwald.bindPopup("<b>Aparição de Nossa Senhora de Gietrzwald</b> <br> Nossa Senhora aparece a duas meninas de 12 e 13 anos durante três meses <br><a href='detalhes.html?id=13'>Clique aqui para obter mais detalhes</a>");
+        knock.bindPopup("<b>Aparição de Nossa Senhora do Silêncio</b> <br> Nossa Senhora aparece a Mary McLoughlin numa época tempestuosa <br><a href='detalhes.html?id=14'>Clique aqui para obter mais detalhes</a>");
+        sprimont.bindPopup("<b>Aparição de Nossa Senhora dos Pobres</b> <br> Nossa Senhora aparece 8 vezes a uma menina de 12 anos <br><a href='detalhes.html?id=15'>Clique aqui para obter mais detalhes</a>");
+
+    </script>
+    <script type="text/javascript" src="/scripts/traducao.js"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>
+
+</html>
