Link do mapa adicionado

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
           </button>
           <div class="collapse navbar-collapse" style="height: 12vh;" id="navbarNavAltMarkup">
             <div class="navBarItens">
-              <a class="nav-link active tdr" aria-current="page" href="index.html">Inicio</a>
-              <a class="nav-link tdr" href="aparicoes.html">Lista das Aparições</a>
-              <a class="nav-link tdr" href="referencias.html">Referências</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link" href="aparicoes.html">Lista das Aparições</a>
+              <a class="nav-link" href="referencias.html">Referências</a>
+              <a class="nav-link" href="mapa.html">Mapa</a> 
             </div>
           </div>
         </div>
@@ -44,7 +45,7 @@
         <br>
         <br>
         <p>Página desenvolvida por: <a href="https://github.com/thiagolutes" target="_blank">Thiago Lutes</a> e <a href="https://github.com/PauloHenrique2" target="_blank">Paulo Henrique Resende Vianna</a>, inspirada no site sobre os Milagres Eucarísticos criado pelo Beato Carlo Acutis:
-        <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank" class = "tdr">link para o site</a></p>
+        <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank">link para o site</a></p>
       </article>
       
       <script type="text/javascript" src="/scripts/traducao.js"></script>
