Link do mapa adicionado

--- a/detalhes.html
+++ b/detalhes.html
@@ -25,6 +25,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Início</a>
               <a class="nav-link" href="aparicoes.html">Lista das Aparições</a>
               <a class="nav-link" href="referencias.html">Referências</a>
+              <a class="nav-link" href="mapa.html">Mapa</a>
             </div>
           </div>
         </div>
