--- a/aparicoes.html
+++ b/aparicoes.html
@@ -24,6 +24,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               <a class="nav-link" href="aparicoes.html">Lista das Aparições</a>
               <a class="nav-link" href="referencias.html">Referências</a>
+              <a class="nav-link" href="mapa.html">Mapa</a>
             </div>
           </div>
         </div>
